--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Calculadora simples</h2>
         <div class="calculadora">
             <form>
-                <p id="resAux">Resultado</p>
+                <p id="resAux"></p>
                 <input class="painel-input" name="" id="painel-input" >
                 <div class="container-btn">
                 <div class="btn p" onclick="insert('%')">%</div>
